RESOLVED FIXED39595
Web Inspector does not respect HTTP status message
https://bugs.webkit.org/show_bug.cgi?id=39595
Summary Web Inspector does not respect HTTP status message
Yuta Kitamura
Reported 2010-05-24 06:18:34 PDT
Currently, Web Inspector does not respect the HTTP status message (which comes with HTTP status code). It looks up the predefined set of status messages from the status code (as in Resource.js). This design introduces a couple of problems: - It cannot handle the status code which has potentially multiple status texts. For example, "101 Switching Protocols" from HTTP/1.1 vs "101 WebSocket Protocol Handshake" from WebSocket protocol spec. This will be a problem when I'll merge a patch that displays the info for WebSocket in the Web Inspector. - It cannot handle unknown status codes. In the past I saw a web server that returned a response like "490 <Vendor-specific status text>" (unfortunately I don't remember what service was doing this). In this case the Inspector shows "490 undefined", which does not sound desirable to me. I admit this is a rare case that will not happen often in the wild, though. Can we use the response text that the server returns?
Attachments
Patch (8.52 KB, patch)
2010-05-25 04:46 PDT, Yuta Kitamura
pfeldman: review+
Joseph Pecoraro
Comment 1 2010-05-24 08:45:06 PDT
I think thats a good idea. Like XHR's `statusText` property.
Yuta Kitamura
Comment 2 2010-05-25 04:46:13 PDT
Pavel Feldman
Comment 3 2010-05-25 15:00:35 PDT
Comment on attachment 57008 [details] Patch Thanks for fixing this!
Yuta Kitamura
Comment 4 2010-05-25 18:53:13 PDT
Thank you for review! I've found a typo in ChangeLog ("HTTP attributes" -> "HTML attributes"). Ukai-san, could you commit this patch after the typo is fixed?
Fumitoshi Ukai
Comment 5 2010-05-25 19:35:30 PDT
Note You need to log in before you can comment on or make changes to this bug.