WebCore/inspector/InspectorResource.h
@@ -166,6 +166,7 @@ namespace WebCore {
         bool m_failed;
         int m_length;
         int m_responseStatusCode;
+        String m_responseStatusText;
         double m_startTime;
         double m_responseReceivedTime;
         double m_endTime;
