WebCore/inspector/front-end/Resource.js
@@ -37,63 +37,6 @@ WebInspector.Resource = function(identifier, url)
     this._category = WebInspector.resourceCategories.other;
 }
 
-WebInspector.Resource.StatusText = {
-    100: "Continue",
-    101: "Switching Protocols",
-    102: "Processing (WebDav)",
-    200: "OK",
-    201: "Created",
-    202: "Accepted",
-    203: "Non-Authoritative Information",
-    204: "No Content",
-    205: "Reset Content",
-    206: "Partial Content",
-    207: "Multi-Status (WebDav)",
-    300: "Multiple Choices",
-    301: "Moved Permanently",
-    302: "Found",
-    303: "See Other",
-    304: "Not Modified",
-    305: "Use Proxy",
-    306: "Switch Proxy",
-    307: "Temporary",
-    400: "Bad Request",
-    401: "Unauthorized",
-    402: "Payment Required",
-    403: "Forbidden",
-    404: "Not Found",
-    405: "Method Not Allowed",
-    406: "Not Acceptable",
-    407: "Proxy Authentication Required",
-    408: "Request Timeout",
-    409: "Conflict",
-    410: "Gone",
-    411: "Length Required",
-    412: "Precondition Failed",
-    413: "Request Entity Too Large",
-    414: "Request-URI Too Long",
-    415: "Unsupported Media Type",
-    416: "Requested Range Not Satisfiable",
-    417: "Expectation Failed",
-    418: "I'm a teapot",
-    422: "Unprocessable Entity (WebDav)",
-    423: "Locked (WebDav)",
-    424: "Failed Dependency (WebDav)",
-    425: "Unordered Collection",
-    426: "Upgrade Required",
-    449: "Retry With",
-    500: "Internal Server Error",
-    501: "Not Implemented",
-    502: "Bad Gateway",
-    503: "Service Unavailable",
-    504: "Gateway Timeout",
-    505: "HTTP Version Not Supported",
-    506: "Variant Also Negotiates",
-    507: "Insufficient Storage (WebDav)",
-    509: "Bandwidth Limit Exceeded",
-    510: "Not Extended"
-};
-
 // Keep these in sync with WebCore::InspectorResource::Type
 WebInspector.Resource.Type = {
     Document:   0,
@@ -621,10 +564,4 @@ WebInspector.Resource.CompareBySize = function(a, b)
 WebInspector.Resource.CompareByTransferSize = function(a, b)
 {
     return a.transferSize - b.transferSize;
-}
-
-
-WebInspector.Resource.StatusTextForCode = function(code)
-{
-    return code ? code + " " + WebInspector.Resource.StatusText[code] : "";
 }
